--- a/bargain.html
+++ b/bargain.html
@@ -15,7 +15,7 @@
 	<input type="button" class="export-contract" value="导出合同">
 </div>
 <div class="bargain-details">
-	<iframe src="ht.html" class="adresa-zmluvy"></iframe>
+	<iframe src="" class="adresa-zmluvy"></iframe>
 </div>
 <div class="contract">
 	<div class="contract-form">
@@ -36,7 +36,7 @@
 			<div class="contract-main">
 				<label><i class="tip">*</i>手机号码：</label>
 				<input type="text" class="compact-phone" placeholder="请输入有效的手机号码" maxlength="11">
-				<input type="button" class="verification-code" value="发送验证码">
+				<span class="verification-code">发送验证码</span>
 				<p class="con-hint3">请输入有效手机号码</p>
 			</div>
 			<div class="contract-main">
