--- a/emailTemplate.html
+++ b/emailTemplate.html
@@ -24,13 +24,16 @@
 			</span>
 		</p>
 		<p>
-			合同签署请点击链接：<a href="www.hfjyhetong.com" class="link-address">www.hfjyhetong.com</a>
+			合同签署请点击链接：<a href="bargain.html" class="link-address">bargain.html</a>
 		</p>
 	</div>
 	<div class="mail-introducePhoto">
 		<h4>相关说明：</h4>
-		<p class="">
+		<p style="margin: 0">
 			此邮箱仅做发送合同使用，不做咨询使用。如有疑问，请联系您的课程顾问，或致电<a href="tel:4008-331-112">4008-331-112</a>。
+		</p>
+		<p>
+			此合同法律效力由杭州尚尚签网路科技有限公司提供技术支持
 		</p>
 		<p>
 			<img src="./images/icon1.jpg" alt="">
